fix notifiction element on mobile devices

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -9,3 +9,6 @@ $color-cancel: #a21c1c;
 $max-width-wrapper: 400px;
 $padding-wrapper: 15px;
 $default-z-index: 999;
+
+// Sizes
+$font-default-size: 14px;
