--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -3,7 +3,7 @@
     border-radius: 4px;
     border: 0;
     font-weight: bold;
-    font-size: .9rem;
+    font-size: $font-default-size;
     outline: none;
     text-decoration: none;
     cursor: pointer;
