--- a/src/scss/components/_element.scss
+++ b/src/scss/components/_element.scss
@@ -3,8 +3,8 @@
     bottom: 10px;
     z-index: $default-z-index;
 
+    display: inline-flex;
     max-width: $max-width-wrapper;
-    padding: $padding-wrapper;
     border-radius: 4px;
     background-color: white;
     box-shadow: 0 10px 15px -3px rgba(0, 0, 0, .08), 0 4px 6px -2px rgba(0, 0, 0, .04);
@@ -17,7 +17,7 @@
 
     @include breakpoint(md) {
         max-width: none;
-        width: calc(100% - 50px);
+        width: calc(100% - 20px);
     }
 
     &.cookies-notification__element--position-left {
@@ -31,12 +31,14 @@
         width: 100%;
         display: flex;
         flex-direction: column;
+
+        padding: $padding-wrapper;
     }
 
     p.cookies-notification__message {
         color: $color-muted;
-        line-height: 1.25rem;
-        font-size: .9rem;
+        line-height: 20px;
+        font-size: $font-default-size;
         margin-top: 0;
         margin-bottom: .8rem;
     }
